<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".auth.LoingActivity">

    <!-- Login -->

    <!-- Email Address -->
    <TextView
        android:id="@+id/login"
        android:layout_width="156dp"
        android:layout_height="63dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="91dp"
        android:gravity="center_horizontal|top"
        android:text="@string/login"
        android:textAppearance="@style/login_leble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_addre"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="41dp"
        android:gravity="top"
        android:text="@string/email_addre"
        android:textAppearance="@style/email_addre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:drawableEnd="@drawable/ic_mail"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:background="@drawable/et_bg"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_addre" />

    <!-- Password -->
    <TextView
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:gravity="top"
        android:text="@string/password"
        android:textAppearance="@style/email_addre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:drawableEnd="@drawable/ic_ei_lock"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:background="@drawable/et_bg"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <!-- Forgot password? -->
    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:gravity="right|top"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


    <!-- Login -->
    <TextView
        android:id="@+id/loginBt"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="53dp"
        android:background="@drawable/login_bt_bg"
        android:gravity="center"
        android:text="@string/submit"
        android:textAppearance="@style/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />


    <!-- Don’t have an Account SignUp -->
    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal|top"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/don_t_have_"
        app:layout_constraintEnd_toEndOf="@+id/loginBt"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/loginBt"
        app:layout_constraintTop_toBottomOf="@+id/loginBt" />


</androidx.constraintlayout.widget.ConstraintLayout>