<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoingActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="197dp"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="26dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_group_45" />

    <!-- Welcome -->
    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="p"
        android:gravity="center_horizontal|top"
        android:text="@string/welcome"
        android:textAppearance="@style/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/lorem_ipsum"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|top"
        android:text="Delhi Gymkhana Club \n 4th and 5th Mar. 2022 \n India vs Denmark"
        android:textAppearance="@style/lorem_ipsum"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <!-- Login -->
    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp"
        android:background="@drawable/login_bt_bg"
        android:gravity="center"
        android:text="@string/login"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textAppearance="@style/login"
        app:layout_constraintEnd_toEndOf="@+id/lorem_ipsum"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/lorem_ipsum"
        app:layout_constraintTop_toBottomOf="@+id/lorem_ipsum" />

    <!-- Don’t have an Account SignUp -->
    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal|top"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/don_t_have_"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>